--- a/src/global.css
+++ b/src/global.css
@@ -34,3 +34,13 @@ footer {
   text-align: center;
   flex-grow: 1;
 }
+
+/* buttons */
+button {
+  background-color: var(--theme-red);
+  border: 0;
+  padding: 8px 10px;
+  color: white;
+  cursor: pointer;
+  font-family: "Poppins";
+}
